# app_library

./: README.md
fast/: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
fast/fast/: app.py  database.py  models.py  schemas.py  security.py
fast/fast/routers/: auth.py  authors.py  books.py  users.py
fast/fast/utils/: sanitize.py
fast/migrations/: env.py
fast/migrations/versions/: 05b9f04c0b9f_create_users_table.py  4c6be82e9581_add_updated_at_column_to_users_table.py  581636bd4016_create_authors_and_books_table.py
fast/tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_authors.py  test_books.py  test_db.py  test_security.py  test_users.py  test_utils.py
vue/: data.json  index.html  package-lock.json  package.json
vue/src/: App.vue
vue/src/assets/: main.css
vue/src/components/: AccountForm.vue  AuthorsForm.vue  AuthorsTable.vue  BooksForm.vue  BooksTable.vue
vue/src/router/: index.js
vue/src/stores/: storeAuthors.js  storeBooks.js
vue/src/views/: AboutView.vue  AuthorsView.vue  BooksView.vue  HomeView.vue
